updated css link

--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="/Users/luanamarley/Desktop/shecodes2024/addplus-w2-world-clock/style.css"
+    />
     <title>World Clock Project</title>
   </head>
   <body>
     <div class="world-clock">
       <h1>World Clock Project</h1>
-      <script src="/Users/luanamarley/Desktop/shecodes2024/addplus-w2-world-clock/style.css"></script>
+
       <script src="/Users/luanamarley/Desktop/shecodes2024/addplus-w2-world-clock/index.js"></script>
-    
-    
-
-
 
       <footer>
-        This project was coded by Luana Marley and is <a href="https://github.com/conectomarley/addplus-w2-world-clock.git"></a>
+        This project was coded by Luana Marley and is
+        <a
+          href="https://github.com/conectomarley/addplus-w2-world-clock.git"
+        ></a>
       </footer>
     </div>
   </body>
