update project structure

--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
     <div class="world-clock">
       <h1>World Clock Project</h1>
 
-      <script src="/Users/luanamarley/Desktop/shecodes2024/addplus-w2-world-clock/index.js"></script>
-
       <footer>
-        This project was coded by Luana Marley and is
-        <a
-          href="https://github.com/conectomarley/addplus-w2-world-clock.git"
-        ></a>
+        This project was coded by Luana Marley and is <a href="#" target="_blank"></a>
       </footer>
+
+      <script src="/Users/luanamarley/Desktop/shecodes2024/addplus-w2-world-clock/index.js"></script>
     </div>
   </body>
 </html>
