--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>World Clock Project</h1>
 
       <footer>
-        This project was coded by Luana Marley and is <a href="#" target="_blank"></a>
+        This project was coded by Luana Marley and is open source on GitHub <a href="https://github.com/conectomarley/addplus-w2-world-clock" target="_blank"></a>
       </footer>
 
       <script src="/Users/luanamarley/Desktop/shecodes2024/addplus-w2-world-clock/index.js"></script>
