--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
       <h1>World Clock Project</h1>
 
       <footer>
-        This project was coded by Luana Marley and is open source on GitHub <a href="https://github.com/conectomarley/addplus-w2-world-clock" target="_blank"></a>
+        This project was coded with 🖤 by Luana Marley and is open source on
+        <a
+          href="https://github.com/conectomarley/addplus-w2-world-clock"
+          target="_blank"
+        >
+          GitHub</a
+        >
       </footer>
-
       <script src="/Users/luanamarley/Desktop/shecodes2024/addplus-w2-world-clock/index.js"></script>
     </div>
   </body>
