update html with select

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <div class="world-clock">
       <h1>World Clock Project</h1>
 
+      <select>
+        <option value="">Select a city</option>
+        <option value="">Sao Paulo</option>
+        <option value="">Sydney</option>
+        <option value="">Melbourne</option>
+        <option value="">Montreal</option>
+      </select>
+
       <footer>
         This project was coded with 🖤 by Luana Marley and is open source on
         <a
