--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="/Users/luanamarley/Desktop/shecodes2024/addplus-w2-world-clock/style.css"
-    />
+    <link rel="stylesheet" href="style.css" />
     <title>World Clock Project</title>
   </head>
   <body>
@@ -30,7 +27,7 @@
           GitHub</a
         >
       </footer>
-      <script src="/Users/luanamarley/Desktop/shecodes2024/addplus-w2-world-clock/index.js"></script>
+      <script src="index.js"></script>
     </div>
   </body>
 </html>
