--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     <title>World Clock Project</title>
   </head>
   <body>
-    <div class="world-clock">
+    <div class="container">
       <h1>World Clock Project</h1>
 
       <select>
         <option value="">Select a city</option>
-        <option value="">Sao Paulo</option>
+        <option value="">São Paulo</option>
         <option value="">Sydney</option>
         <option value="">Montreal</option>
       </select>
 
+      <div class="cities">
+        <h2>Los Angeles</h2>
+        <div class="date">September 15th 2024</div>
+        <div class="time">04:45:27 PM</div>
+      </div>
 
-
-
-
-      
       <footer>
         This project was coded with 🖤 by Luana Marley and is open source on
         <a
