--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 
       <select>
         <option value="">Select a city</option>
-        <option value="">São Paulo</option>
-        <option value="">Sydney</option>
-        <option value="">Montreal</option>
+        <option value="">São Paulo 🇧🇷 </option>
+        <option value="">Sydney 🇦🇺 </option>
+        <option value="">Montreal 🇨🇦 </option>
       </select>
-
+      <p></p>
       <div class="cities">
-        <h2>Los Angeles</h2>
-        <div class="date">September 15th 2024</div>
-        <div class="time">04:45:27 PM</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">September 15th 2024</div>
+        </div>
+        <div class="time">04:45:27 <small>PM</small></div>
       </div>
-
+      <p></p>
       <footer>
         This project was coded with 🖤 by Luana Marley and is open source on
         <a
