--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
       <select>
         <option value="">Select a city</option>
-        <option value="">São Paulo 🇧🇷 </option>
-        <option value="">Sydney 🇦🇺 </option>
-        <option value="">Montreal 🇨🇦 </option>
+        <option value="">São Paulo 🇧🇷</option>
+        <option value="">Sydney 🇦🇺</option>
+        <option value="">Montreal 🇨🇦</option>
       </select>
       <p></p>
       <div class="cities">
@@ -25,8 +25,10 @@
         <div class="time">04:45:27 <small>PM</small></div>
       </div>
       <p></p>
+
       <footer>
-        This project was coded with 🖤 by Luana Marley and is open source on
+        This project was coded with 🖤 by <strong>Luana Marley</strong> and is
+        open source on
         <a
           href="https://github.com/conectomarley/addplus-w2-world-clock"
           target="_blank"
