--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 
       <select>
         <option value="">Select a city</option>
-        <option value="">Perth</option>
-        <option value="">Adelaide</option>
+        <option value="">Perth 🇦🇺</option>
+        <option value="">Adelaide 🇦🇺</option>
         <option value="">Montreal 🇨🇦</option>
       </select>
       <p></p>
       <div class="cities" id="sao-paulo">
         <div>
-          <h2>Sao Paulo</h2>
+          <h2>Sao Paulo 🇧🇷</h2>
           <div class="date">September 15th 2024</div>
         </div>
         <div class="time">04:45:27 <small>PM</small></div>
       </div>
       <div class="cities" id="sydney">
         <div>
-          <h2>Sydney</h2>
+          <h2>Sydney 🇦🇺</h2>
           <div class="date">September 15th 2024</div>
         </div>
         <div class="time">04:45:27 <small>PM</small></div>
