--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p></p>
       <div class="cities" id="sao-paulo">
         <div>
-          <h2>Sao Paulo 🇧🇷</h2>
+          <h2>São Paulo 🇧🇷</h2>
           <div class="date">September 15th 2024</div>
         </div>
         <div class="time">04:45:27 <small>PM</small></div>
