update sao paulo html

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="cities" id="sao-paulo">
         <div>
           <h2>São Paulo 🇧🇷</h2>
-          <div class="date">September 15th 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">04:45:27 <small>PM</small></div>
+        <div class="time"></div>
       </div>
       <div class="cities" id="sydney">
         <div>
