--- a/index.html
+++ b/index.html
@@ -19,19 +19,21 @@
         <option value="">Montreal 🇨🇦</option>
       </select>
       <p></p>
-      <div class="cities" id="sao-paulo">
-        <div>
-          <h2>São Paulo 🇧🇷</h2>
-          <div class="date"></div>
+      <div id="city">
+        <div class="cities" id="sao-paulo">
+          <div>
+            <h2>São Paulo 🇧🇷</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="cities" id="sydney">
-        <div>
-          <h2>Sydney 🇦🇺</h2>
-          <div class="date">September 15th 2024</div>
+        <div class="cities" id="sydney">
+          <div>
+            <h2>Sydney 🇦🇺</h2>
+            <div class="date">September 15th 2024</div>
+          </div>
+          <div class="time">04:45:27 <small>PM</small></div>
         </div>
-        <div class="time">04:45:27 <small>PM</small></div>
       </div>
       <p></p>
 
