included Bali js and html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
           </div>
           <div class="time"></div>
         </div>
+        <p></p>
+        <div class="city" id="bali">
+          <div>
+            <h4>Bali 🇮🇩</h4>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
       </div>
     </div>
     <p></p>
