update city select js

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="container">
       <h1>World Clock Project</h1>
 
-      <select>
-        <option value="">Select a city</option>
-        <option value="">Perth 🇦🇺</option>
-        <option value="">Adelaide 🇦🇺</option>
-        <option value="">Montreal 🇨🇦</option>
+      <select id="city">
+        <option value="">Select a city...</option>
+        <option value="America/Bogota">Colombia 🇨🇴</option>
+        <option value="NZ-CHAT">New Zeland 🇳🇿</option>
+        <option value="Canada/Eastern">Montreal 🇨🇦</option>
       </select>
       <p></p>
       <div id="cities">
