upate value cities js

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <select id="city">
         <option value="">Select a city...</option>
         <option value="America/Bogota">Colombia 🇨🇴</option>
-        <option value="NZ-CHAT">New Zeland 🇳🇿</option>
+        <option value="NZ-CHAT">New Zealand 🇳🇿</option>
         <option value="Canada/Eastern">Montreal 🇨🇦</option>
       </select>
       <p></p>
