update js city value and small

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <select id="city">
         <option value="">Select a city...</option>
         <option value="America/Bogota">Colombia 🇨🇴</option>
-        <option value="NZ-CHAT">New Zealand 🇳🇿</option>
-        <option value="Canada/Eastern">Montreal 🇨🇦</option>
+        <option value="Pacific/Auckland">New Zealand 🇳🇿</option>
+        <option value="America/Montreal">Canadá 🇨🇦</option>
       </select>
       <p></p>
       <div id="cities">
