update guess moment current

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
       <select id="city">
         <option value="">Select a city...</option>
+        <option value="current">My location 🌏</option>
         <option value="America/Bogota">Colombia 🇨🇴</option>
         <option value="Pacific/Auckland">New Zealand 🇳🇿</option>
         <option value="America/Montreal">Canadá 🇨🇦</option>
