--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>
-        <a href="/">World Clock Project</a>
-      </h1>
+      <h1>World Clock Project</h1>
 
       <select id="city">
         <option value="">Select a city...</option>
